--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,25 @@ services:
   mongo:
     image: mongo:4.0.1-xenial
     network_mode: host
+
+  influxdb:
+    image: influxdb:1.6.2-alpine
+    network_mode: host
+    #ports:
+    #- "8086:8086"
+
+  grafana:
+    image: grafana/grafana:5.2.4
+    network_mode: host
+    #ports:
+    #- "3000:3000"
+    #links:
+    #- influxdb
+
+  telegraf:
+    image: telegraf:1.7.4-alpine
+    network_mode: host
+    volumes:
+    - $PWD/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    - /var/run/docker.sock:/var/run/docker.sock
+
